--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^1.6.5",
+    "flowbite-datepicker": "^1.2.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.12.0",
@@ -16,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "tailwind-datepicker-react": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
