--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "flowbite": "^1.6.5",
     "flowbite-datepicker": "^1.2.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.3.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.12.0",
     "react-dnd": "^16.0.1",
