--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "passport": "^0.6.0"
   },
   "scripts": {
     "start": "node server.js"
