--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
-    "passport": "^0.6.0"
+    "mongoose": "^7.4.1",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "router": "^1.3.8"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   }
 }
