--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   }
 }
