--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -13,6 +13,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.7",
     "router": "^1.3.8"
   },
   "scripts": {
