--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.12.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
